docs/0.16/_sources/api/gammapy.maps.Geom.rst.txt
Geom
====

.. currentmodule:: gammapy.maps

.. autoclass:: Geom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Geom.center_coord
      ~Geom.center_pix
      ~Geom.center_skydir
      ~Geom.data_shape
      ~Geom.is_allsky
      ~Geom.is_image

   .. rubric:: Methods Summary

   .. autosummary::

      ~Geom.contains
      ~Geom.contains_pix
      ~Geom.coord_to_idx
      ~Geom.coord_to_pix
      ~Geom.coord_to_tuple
      ~Geom.copy
      ~Geom.crop
      ~Geom.downsample
      ~Geom.energy_mask
      ~Geom.from_hdulist
      ~Geom.get_axis_by_name
      ~Geom.get_axis_index_by_name
      ~Geom.get_coord
      ~Geom.get_idx
      ~Geom.make_bands_hdu
      ~Geom.pad
      ~Geom.pix_to_coord
      ~Geom.pix_to_idx
      ~Geom.slice_by_idx
      ~Geom.solid_angle
      ~Geom.to_cube
      ~Geom.to_image
      ~Geom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: is_allsky
   .. autoattribute:: is_image

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: energy_mask
   .. automethod:: from_hdulist
   .. automethod:: get_axis_by_name
   .. automethod:: get_axis_index_by_name
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: make_bands_hdu
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: upsample
